feat: i18n with ngx-translate

--- a/src/app/components/landings/b2b-landing-page/b2b-landing-page.component.html
+++ b/src/app/components/landings/b2b-landing-page/b2b-landing-page.component.html
@@ -14,6 +14,7 @@
                     (click)="$event.preventDefault(); scrollToSection('b2b-solutions'); toggleMobileMenu()">Soluciones</a>
                 <a href="#b2b-pricing"
                     (click)="$event.preventDefault(); scrollToSection('b2b-pricing'); toggleMobileMenu()">Planes</a>
+                <app-language-selector></app-language-selector>
                 <button mat-stroked-button class="nav-cta" (click)="toggleMobileMenu()">Acceso Partner</button>
             </nav>
         </div>
