--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <button mat-icon-button (click)="snav.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
-        <span>AIToFlower App</span>
+        <span>AIToFlower </span>
         <span class="spacer"></span>
         <app-language-selector></app-language-selector>
         <button mat-icon-button *ngIf="authService.isLoggedIn()">
