--- a/src/app/landings/landing-page/pricing/pricing.component.html
+++ b/src/app/landings/landing-page/pricing/pricing.component.html
@@ -31,7 +31,8 @@
       <li>1 Revisión por cultivo</li>
       <li>Historial 2 cultivos</li>
     </ul>
-    <button mat-flat-button disabled="true">Solo Invitación</button>
+
+            <a href="#newsletter"><button mat-flat-button disabled="true">Solo Invitación</button></a>
   </div>
 
   <!-- 2. Cogollo -->
@@ -45,7 +46,8 @@
       <li>1 Diag. Imagen/sem</li>
       <li>Historial 10 cultivos</li>
     </ul>
-    <button mat-flat-button disabled="true">Solo Invitación</button>
+
+            <a href="#newsletter"><button mat-flat-button disabled="true">Solo Invitación</button></a>
   </div>
 
   <!-- 3. Cosecha -->
@@ -59,7 +61,8 @@
       <li>1 Diag. Imagen/día</li>
       <li>Historial 100 cultivos</li>
     </ul>
-    <button mat-flat-button disabled="true">Solo Invitación</button>
+
+            <a href="#newsletter"><button mat-flat-button disabled="true">Solo Invitación</button></a>
   </div>
 
   <!-- 4. Granja (Enterprise) -->
@@ -73,8 +76,11 @@
       <li>Diag. Imagen personalizados</li>
       <li>Historial personalizado</li>
     </ul>
-    <button mat-flat-button disabled="true">
-      {{ 'LANDING.PRICING.PLANS.INVITE_ONLY' | translate }}
-    </button>
+
+    <a href="#newsletter">
+      <button mat-flat-button disabled="true">
+        {{ 'LANDING.PRICING.PLANS.INVITE_ONLY' | translate }}
+      </button>
+    </a>
   </div>
 </section>
