--- a/src/app/landings/landing-page/problem-solution/problem-solution.component.html
+++ b/src/app/landings/landing-page/problem-solution/problem-solution.component.html
@@ -21,10 +21,11 @@
             <h2>{{'LANDING.SOLUTION.TITLE' | translate}}</h2>
             <p class="solution-lead">{{'LANDING.SOLUTION.LEAD' | translate}}</p>
             <p>{{'LANDING.SOLUTION.BODY' | translate}}</p>
-
-            <button mat-flat-button color="primary" class="solution-cta" routerLink="/dashboard">
-                <mat-icon>arrow_forward</mat-icon>
-                {{'LANDING.SOLUTION.CTA' | translate}}
-            </button>
+            <a href="#newsletter">
+              <button mat-flat-button color="primary" class="solution-cta" routerLink="/#newsletter">
+                  <mat-icon>arrow_forward</mat-icon>
+                  {{'LANDING.SOLUTION.CTA' | translate}}
+              </button>
+            </a>
         </div>
     </section>
