--- a/src/app/components/shared/language-selector/language-selector.component.css
+++ b/src/app/components/shared/language-selector/language-selector.component.css
@@ -1,6 +1,5 @@
-.lang-select { display:flex; align-items:center; min-width:140px; }
-.lang-select .mat-select { color: inherit; min-width:140px; }
+.lang-select { display:flex; align-items:center; min-width:130px; padding-left: 10px;}
+.lang-select .mat-select { color: inherit;}
 .lang-select .mat-select-trigger { white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
 .mat-select-value { color: inherit; }
 .main-nav .lang-select { margin-right: auto; }
-.dashboard-toolbar .lang-select { margin-left:8px; }
